Jan 17 2003  3.1.0  Tweaked empty SSID assignment (again)
                    Forced wext-fetched signal levels to abs values
                    Fixed initialization of client sort value in panels
                    Moved group updates into population code in panels
                    Added --gui long-option to kismet_client
Jan 16 2003  3.1.0  Fixed offset mangling in probe request parsing
Jan 15 2003  3.1.0  Fixed data network autogrouping
                    Fixed panels client segfault when viewing details on a 
                     network absorbed into an autogroup
                    Fixed bug where single-packet new networks sometimes showed
                     up as having no packets in panels client
Jan 13 2003  3.1.0  Added more packet sanitizing.  Most invalid management
                     frames now intercepted, data frames still problematic.
                    Merged gpsmap patches from Andrew Knutsen to add labeling
                     of manufacturer and beacon info, avoid overlapping network
                     labels, and scripts in the extras directory to generate
                     multiple maps of an area and to merge the IEEE 
                     manufacturer list into the Kismet manuf file.
                    Tweaked mac_map to separate insert and fast_insert
                    Added autogrouping data-only networks
                    Added validation checks before calling Packetsource::Close,
                     fixes segfault for invalid pcapfile opens
                    Improved probed network integration code
Jan 12 2003  3.1.0  Fixed stupid word-transposition in default config, should
                     be channelsplit not splitchannels.
Jan 10 2003  3.1.0  Started implementing wsp100 snmp calls in new framework
                    Added sanity checks to ExecSysCmd() calls in pcapsource
                    Added coloring of decloaked networks to panelfront